--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "tsx server/index.ts",
-    "build": "vite build",
-    "vercel-build": "vite build && tsc",
+    "build": "vite build && npm run build:server",
+    "build:server": "esbuild server/index.ts --platform=node --packages=external --bundle --outdir=dist",
+    "postbuild": "ls -la dist",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
