--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: flextype
     env: node
     buildCommand: npm install && npm run build
-    startCommand: node dist/index.js || node server.js
+    startCommand: npm start
     envVars:
       - key: NODE_ENV
         value: production
